tests/testcase/errors/syntax_error.ob
fun main() do
  let x = (5 + 3;
  return x;
end